@@ -184,7 +184,7 @@ public class ContentIndexer {
 
   void setNamedVersion(final String alias, final String version) {
     List<String> allContentTypes = Arrays.stream(ContentIndextype.values())
-        .map(ContentIndextype::toString).collect(Collectors.toList());
+        .map(ContentIndextype::toString).toList();
     es.addOrMoveIndexAlias(alias, version, allContentTypes);
   }
 
@@ -258,44 +258,48 @@ public class ContentIndexer {
       loader.copyTo(out);
 
       ObjectMapper objectMapper = mapperUtils.getSharedContentObjectMapper();
-
-      try {
-        Content content = (Content) objectMapper.readValue(out.toString(), ContentBase.class);
-
-        if (context.shouldSkipUnpublished(content)) {
-          log.info("Skipping unpublished content: {}", content.getId());
-          return;
-        }
-
-        content = this.augmentChildContent(content, treeWalk.getPathString(), null, content.getPublished());
-
-        if (null != content) {
-          log.info(CONTENT_LOG_PREFIX + "Processing file: {} (type: {}, id: {})", treeWalk.getPathString(),
-              content.getType(), content.getId());
-          indexContentObject(context.contentCache, context.tagsList, context.allUnits, context.publishedUnits,
-              context.indexProblemCache, treeWalk.getPathString(), content);
-        }
-      } catch (JsonMappingException e) {
-        log.warn(CONTENT_LOG_PREFIX + "Unable to parse the json file found {} as a content object. "
-            + "Skipping file due to error: \n {}", treeWalk.getPathString(), e.getMessage());
-        Content dummyContent = new Content();
-        dummyContent.setCanonicalSourceFile(treeWalk.getPathString());
-        this.registerContentProblem(dummyContent, "Index failure - Unable to parse json file found - "
-            + treeWalk.getPathString() + ERROR_OCCURRED_SUFFIX + e.getMessage(), context.indexProblemCache);
-      } catch (IOException e) {
-        log.error("IOException while trying to parse {}", treeWalk.getPathString(), e);
-        Content dummyContent = new Content();
-        dummyContent.setCanonicalSourceFile(treeWalk.getPathString());
-        this.registerContentProblem(dummyContent,
-            "Index failure - Unable to read the json file found - " + treeWalk.getPathString()
-                + ERROR_OCCURRED_SUFFIX + e.getMessage(), context.indexProblemCache);
-      }
+      parseAndIndexJsonContent(objectMapper, out.toString(), treeWalk.getPathString(), context);
     } catch (Exception e) {
       log.error(CONTENT_LOG_PREFIX + "Unexpected error while processing file {}: {}", treeWalk.getPathString(), e.getMessage(), e);
       Content dummyContent = new Content();
       dummyContent.setCanonicalSourceFile(treeWalk.getPathString());
       this.registerContentProblem(dummyContent,
           "Index failure - Unexpected error while processing file - " + treeWalk.getPathString()
+              + ERROR_OCCURRED_SUFFIX + e.getMessage(), context.indexProblemCache);
+    }
+  }
+
+  private void parseAndIndexJsonContent(final ObjectMapper objectMapper, final String jsonContent,
+                                        final String filePath, final IndexingContext context) {
+    try {
+      Content content = (Content) objectMapper.readValue(jsonContent, ContentBase.class);
+
+      if (context.shouldSkipUnpublished(content)) {
+        log.info("Skipping unpublished content: {}", content.getId());
+        return;
+      }
+
+      content = this.augmentChildContent(content, filePath, null, content.getPublished());
+
+      if (null != content) {
+        log.info(CONTENT_LOG_PREFIX + "Processing file: {} (type: {}, id: {})", filePath,
+            content.getType(), content.getId());
+        indexContentObject(context.contentCache, context.tagsList, context.allUnits, context.publishedUnits,
+            context.indexProblemCache, filePath, content);
+      }
+    } catch (JsonMappingException e) {
+      log.warn(CONTENT_LOG_PREFIX + "Unable to parse the json file found {} as a content object. "
+          + "Skipping file due to error: \n {}", filePath, e.getMessage());
+      Content dummyContent = new Content();
+      dummyContent.setCanonicalSourceFile(filePath);
+      this.registerContentProblem(dummyContent, "Index failure - Unable to parse json file found - "
+          + filePath + ERROR_OCCURRED_SUFFIX + e.getMessage(), context.indexProblemCache);
+    } catch (IOException e) {
+      log.error("IOException while trying to parse {}", filePath, e);
+      Content dummyContent = new Content();
+      dummyContent.setCanonicalSourceFile(filePath);
+      this.registerContentProblem(dummyContent,
+          "Index failure - Unable to read the json file found - " + filePath
               + ERROR_OCCURRED_SUFFIX + e.getMessage(), context.indexProblemCache);
     }
   }
@@ -327,7 +331,7 @@ public class ContentIndexer {
 
     if (flattenedContent instanceof IsaacQuiz) {
       List<ContentBase> children = flattenedContent.getChildren();
-      if (children.stream().anyMatch(c -> !(c instanceof IsaacQuizSection))) {
+      if (children != null && children.stream().anyMatch(c -> !(c instanceof IsaacQuizSection))) {
         log.info("IsaacQuiz ({}) contains top-level non-quiz sections. Skipping.", flattenedContent.getId());
         this.registerContentProblem(flattenedContent, "Index failure - Invalid "
             + "content type among quiz sections. Quizzes can only contain quiz sections "
@@ -884,22 +888,19 @@ public class ContentIndexer {
 
     Integer expectedItemCount = null;
     for (Choice choice : q.getChoices()) {
-      if (!(choice instanceof ItemChoice c)) {
-        continue;
-      }
-
-      List<Item> items = c.getItems();
-      if (items == null || items.isEmpty()) {
-        this.registerContentProblem(content, buildClozeQuestionMissingItemsMessage(q), indexProblemCache);
-        continue;
-      }
-
-      int itemCount = items.size();
-      if (expectedItemCount == null) {
-        expectedItemCount = itemCount;
-      } else if (itemCount != expectedItemCount) {
-        this.registerContentProblem(content,
-            buildClozeQuestionIncorrectItemCountMessage(q, expectedItemCount, itemCount), indexProblemCache);
+      if (choice instanceof ItemChoice c) {
+        List<Item> items = c.getItems();
+        if (items == null || items.isEmpty()) {
+          this.registerContentProblem(content, buildClozeQuestionMissingItemsMessage(q), indexProblemCache);
+        } else {
+          int itemCount = items.size();
+          if (expectedItemCount == null) {
+            expectedItemCount = itemCount;
+          } else if (itemCount != expectedItemCount) {
+            this.registerContentProblem(content,
+                buildClozeQuestionIncorrectItemCountMessage(q, expectedItemCount, itemCount), indexProblemCache);
+          }
+        }
       }
     }
   }
@@ -931,7 +932,7 @@ public class ContentIndexer {
                                                final Choice choice,
                                                final Map<Content, List<String>> indexProblemCache) {
     if (choice instanceof Formula f) {
-      if (f.getPythonExpression().contains("\\")) {
+      if (f.getPythonExpression() != null && f.getPythonExpression().contains("\\")) {
         registerContentProblemQuestionFormulaContainsBackslash(content, indexProblemCache, question, choice);
       } else if (f.getPythonExpression() == null || f.getPythonExpression().isEmpty()) {
         registerContentProblemQuestionFormulaIsEmpty(content, indexProblemCache, question, choice);
@@ -990,7 +991,7 @@ public class ContentIndexer {
 
   private void registerContentProblemConflictingUnitSettings(
       final Content content, final Map<Content, List<String>> indexProblemCache, final IsaacNumericQuestion question) {
-    if (question.getRequireUnits() && null != question.getDisplayUnit() && !question.getDisplayUnit().isEmpty()) {
+    if (Boolean.TRUE.equals(question.getRequireUnits()) && null != question.getDisplayUnit() && !question.getDisplayUnit().isEmpty()) {
       this.registerContentProblem(content,
           NUMERIC_QUESTION + question.getId() + " has a displayUnit set but also requiresUnits!"
               + " Units will be ignored for this question!", indexProblemCache);
@@ -1007,7 +1008,7 @@ public class ContentIndexer {
   private void registerContentProblemUnnecessaryQuantityChoiceUnits(
       final Content content, final Map<Content, List<String>> indexProblemCache, final IsaacNumericQuestion question,
       final Quantity quantity) {
-    if (!question.getRequireUnits() && null != quantity.getUnits() && !quantity.getUnits().isEmpty()) {
+    if (!Boolean.TRUE.equals(question.getRequireUnits()) && null != quantity.getUnits() && !quantity.getUnits().isEmpty()) {
       this.registerContentProblem(content, NUMERIC_QUESTION + question.getId()
           + " has a Quantity with units but does not require units!", indexProblemCache);
     }
@@ -1032,7 +1033,7 @@ public class ContentIndexer {
     if (content instanceof IsaacEventPage eventPage) {
       if (eventPage.getEndDate() == null) {
         this.registerContentProblem(content, "Event has no end date", indexProblemCache);
-      } else if (eventPage.getEndDate().isBefore(eventPage.getDate())) {
+      } else if (eventPage.getDate() != null && eventPage.getEndDate().isBefore(eventPage.getDate())) {
         this.registerContentProblem(content, "Event has end date before start date", indexProblemCache);
       }
     }
@@ -1049,7 +1050,7 @@ public class ContentIndexer {
 
   private void registerContentProblemsChoiceQuestionMissingChoicesOrAnswer(
       final Content content, final Map<Content, List<String>> indexProblemCache) {
-    if (content instanceof ChoiceQuestion question && !(content.getType().equals("isaacQuestion"))) {
+    if (content instanceof ChoiceQuestion question && (content.getType() == null || !content.getType().equals("isaacQuestion"))) {
 
       if (question.getChoices() == null || question.getChoices().isEmpty()) {
         registerContentProblemChoiceQuestionMissingChoices(indexProblemCache, question);
@@ -1163,7 +1164,7 @@ public class ContentIndexer {
 
   private void registerContentProblemValueWithChildren(
       final Content content, final Map<Content, List<String>> indexProblemCache) {
-    if (content.getValue() != null && !content.getChildren().isEmpty()) {
+    if (content.getValue() != null && content.getChildren() != null && !content.getChildren().isEmpty()) {
       String id = content.getId();
       String firstLine = "Content";
       if (id != null) {
@@ -1200,10 +1201,7 @@ public class ContentIndexer {
       if (c.getRelatedContent() != null) {
         expectedIds.addAll(c.getRelatedContent());
         for (String id : c.getRelatedContent()) {
-          if (!incomingReferences.containsKey(id)) {
-            incomingReferences.put(id, new HashSet<>());
-          }
-          incomingReferences.get(id).add(c);
+          incomingReferences.computeIfAbsent(id, k -> new HashSet<>()).add(c);
         }
       }
 
@@ -1239,11 +1237,12 @@ public class ContentIndexer {
   private void recordPublishedToUnpublishedReferenceProblems(final Map<String, Set<Content>> incomingReferences,
                                                              final Map<String, Content> contentById,
                                                              final Map<Content, List<String>> indexProblemCache) {
-    for (String refTargetId : incomingReferences.keySet()) {
+    for (Map.Entry<String, Set<Content>> entry : incomingReferences.entrySet()) {
+      String refTargetId = entry.getKey();
       Content refTarget = contentById.get(refTargetId);
       if (refTarget != null) {
-        for (Content refSrc : incomingReferences.get(refTargetId)) {
-          if (refSrc.getPublished() && !refTarget.getPublished()) {
+        for (Content refSrc : entry.getValue()) {
+          if (Boolean.TRUE.equals(refSrc.getPublished()) && !Boolean.TRUE.equals(refTarget.getPublished())) {
             this.registerContentProblem(refSrc, "Content is published, "
                 + "but references unpublished content '" + refTargetId + "'.", indexProblemCache);
           }
@@ -1311,9 +1310,9 @@ public class ContentIndexer {
     reportBuilder.append("=".repeat(100)).append("\n");
     reportBuilder.append(CONTENT_LOG_PREFIX).append("INDEXING FAILURE REPORT\n");
     reportBuilder.append("=".repeat(100)).append("\n");
-    reportBuilder.append(String.format("Version: %s\n", sanitiseInternalLogValue(version)));
-    reportBuilder.append(String.format("Successfully Indexed: %d items\n", contentCache.size()));
-    reportBuilder.append(String.format("Items with Problems: %d items\n", realProblems.size()));
+    reportBuilder.append(String.format("Version: %s%n", sanitiseInternalLogValue(version)));
+    reportBuilder.append(String.format("Successfully Indexed: %d items%n", contentCache.size()));
+    reportBuilder.append(String.format("Items with Problems: %d items%n", realProblems.size()));
     reportBuilder.append("-".repeat(100)).append("\n\n");
 
     // Group problems by error type and file
@@ -1322,24 +1321,24 @@ public class ContentIndexer {
     // Report each problem with details
     int problemIndex = 1;
     for (Map.Entry<String, List<Map.Entry<Content, List<String>>>> typeGroup : problemsByType.entrySet()) {
-      reportBuilder.append(String.format("\n[%s]\n", typeGroup.getKey()));
+      reportBuilder.append(String.format("%n[%s]%n", typeGroup.getKey()));
       for (Map.Entry<Content, List<String>> problem : typeGroup.getValue()) {
         Content content = problem.getKey();
         List<String> errors = problem.getValue();
 
-        reportBuilder.append(String.format("\n  %d. %s\n", problemIndex, content.getCanonicalSourceFile()));
+        reportBuilder.append(String.format("%n  %d. %s%n", problemIndex, content.getCanonicalSourceFile()));
         if (content.getId() != null) {
-          reportBuilder.append(String.format("     ID: %s\n", content.getId()));
+          reportBuilder.append(String.format("     ID: %s%n", content.getId()));
         }
         if (content.getTitle() != null) {
-          reportBuilder.append(String.format("     Title: %s\n", content.getTitle()));
+          reportBuilder.append(String.format("     Title: %s%n", content.getTitle()));
         }
-        reportBuilder.append(String.format("     Type: %s\n", content.getType()));
-        reportBuilder.append(String.format("     Published: %s\n", content.getPublished()));
+        reportBuilder.append(String.format("     Type: %s%n", content.getType()));
+        reportBuilder.append(String.format("     Published: %s%n", content.getPublished()));
         reportBuilder.append("     Issues:\n");
 
         for (String error : errors) {
-          reportBuilder.append(String.format("       • %s\n", error));
+          reportBuilder.append(String.format("       • %s%n", error));
         }
 
         problemIndex++;
@@ -1355,7 +1354,7 @@ public class ContentIndexer {
       int totalIssues = typeGroup.getValue().stream()
           .mapToInt(e -> e.getValue().size())
           .sum();
-      reportBuilder.append(String.format("  %-30s: %3d files, %3d total issues\n",
+      reportBuilder.append(String.format("  %-30s: %3d files, %3d total issues%n",
           typeGroup.getKey(), typeGroup.getValue().size(), totalIssues));
     }
 
@@ -1376,65 +1375,9 @@ public class ContentIndexer {
     Map<String, List<Map.Entry<Content, List<String>>>> grouped = new LinkedHashMap<>();
 
     for (Map.Entry<Content, List<String>> problem : problems) {
-      String errorType = identifyErrorType(problem.getValue());
-
-      grouped.computeIfAbsent(errorType, k -> new ArrayList<>()).add(problem);
+      grouped.computeIfAbsent("Validation Failures", k -> new ArrayList<>()).add(problem);
     }
 
     return grouped;
-  }
-
-  /**
-   * Identify the primary error type based on error messages.
-   *
-   * @param errors  the list of error messages
-   * @return a string describing the error type
-   */
-  private String identifyErrorType(final List<String> errors) {
-    if (errors.isEmpty()) {
-      return "Unknown Error";
-    }
-
-    String firstError = errors.get(0).toLowerCase();
-
-    // Check error patterns
-    if (firstError.contains("duplicate")) {
-      return "ID Collision";
-    } else if (firstError.contains("invalid id")
-        || firstError.contains("restricted character")) {
-      return "Invalid ID Format";
-    } else if (firstError.contains("too long")) {
-      return "ID Too Long";
-    } else if (firstError.contains("question") && firstError.contains("without")) {
-      return "Question Configuration";
-    } else if (firstError.contains("choice") || firstError.contains("answer")) {
-      return "Choice/Answer Issue";
-    } else if (firstError.contains("numeric")
-        || firstError.contains("quantity")
-        || firstError.contains("unit")) {
-      return "Numeric Question";
-    } else if (firstError.contains("symbolic")
-        || firstError.contains("formula")
-        || firstError.contains("python")) {
-      return "Symbolic Question";
-    } else if (firstError.contains("event")) {
-      return "Event Configuration";
-    } else if (firstError.contains("media")
-        || firstError.contains("image")
-        || firstError.contains("alt")) {
-      return "Media Issue";
-    } else if (firstError.contains("reference")
-        || firstError.contains("missing")
-        || firstError.contains("found")) {
-      return "Content Reference";
-    } else if (firstError.contains("published")) {
-      return "Publishing Issue";
-    } else if (firstError.contains("expandable")) {
-      return "Content Structure";
-    } else if (firstError.contains("index failure")) {
-      return "Indexing Error";
-    } else {
-      return "Other Issue";
-    }
   }
 }
